<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tapit="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#01ac62"
    android:padding="10dp"
    android:orientation="vertical"
    android:id="@+id/pause_dialog">

    <com.ahn.tapit.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/pause"
        tapit:fontName="atariFull.ttf"
        android:textSize="25dp"
        android:textColor="#FFFFFF" />
    <com.ahn.tapit.MyButton
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:id="@+id/resume_button"
        android:layout_marginBottom="5dp"
        android:text="@string/resume"
        android:textSize="15dp"
        android:background="@drawable/button_animation2"
        />
    <com.ahn.tapit.MyButton
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:id="@+id/restart_button"
        android:layout_margin="5dp"
        android:textSize="15dp"
        android:text="@string/restart"
        android:background="@drawable/button_animation2"
        />
    <com.ahn.tapit.MyButton
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:textSize="15dp"
        android:layout_gravity="center"
        android:id="@+id/highscore_button"
        android:layout_margin="5dp"
        android:text="@string/title_high_score"
        android:background="@drawable/button_animation2"
        />
    <com.ahn.tapit.MyButton
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:textSize="15dp"
        android:id="@+id/quit_button"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/quit"
        android:background="@drawable/button_animation2"
        />

</LinearLayout>