<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tapit="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.ahn.tapit.MyTextView
        android:id="@+id/tap_it"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/title_activity_the_finger"
        android:textColor="@color/whiteTextColor"
        android:textSize="52.5dp"
        tapit:fontName="atariFull.ttf" />

    <com.ahn.tapit.MyButton
        android:id="@+id/button_instructions"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_animation2"
        android:text="@string/title_activity_instructions"
        android:textSize="17.5dp" />

    <com.ahn.tapit.MyButton
        android:id="@+id/button_play"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_above="@id/button_instructions"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_animation2"
        android:text="@string/play_button"
        android:textSize="17.5sp" />

    <com.ahn.tapit.MyButton
        android:id="@+id/button_high_scores"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_below="@id/button_instructions"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_animation2"
        android:text="@string/title_high_score"
        android:textSize="17.5dp" />

</RelativeLayout>