<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:tapit="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ahn.tapit.InstructionsActivity">
    <com.ahn.tapit.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_instructions"
        tapit:fontName="atariFull.ttf"
        android:textColor="#d40909"
        android:textSize="25dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/instructions_text"
        />
    <com.ahn.tapit.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tapit:fontName="atariFull.ttf"
        android:textSize="20dp"
        android:textColor="#0863f6"
        android:layout_below="@id/instructions_text"
        android:text="@string/objective_text"
        android:id="@+id/objective_text"/>
    <com.ahn.tapit.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17.5dp"
        tapit:fontName="atariFull.ttf"
        android:textColor="#FFFFFF"
        android:text="@string/instructions"
        android:layout_below="@id/objective_text"
        android:layout_marginTop="10dp"
        android:id="@+id/inst_content"
        />
    <com.ahn.tapit.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/power_up_down"
        tapit:fontName="atariFull.ttf"
        android:layout_below="@id/inst_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/whiteTextColor"
        android:id="@+id/power_up_down"
        android:textSize="20dp"/>
    <ImageView
        android:layout_width="145dp"
        android:layout_height="37.5dp"
        android:layout_below="@id/power_up_down"
        android:id="@+id/add_score"
        tools:ignore="ContentDescription"
        android:layout_marginBottom="7dp"
        android:background="@drawable/button_animation2"/>
    <ImageView
        android:layout_width="145dp"
        android:layout_height="37.5dp"
        android:layout_below="@id/add_score"
        android:id="@+id/sub_score"
        tools:ignore="ContentDescription"
        android:layout_marginBottom="7dp"
        android:background="@drawable/button_animation2"/>
    <ImageView
        android:layout_width="145dp"
        android:layout_height="37.5dp"
        tools:ignore="ContentDescription"
        android:id="@+id/add_time"
        android:layout_below="@id/sub_score"
        android:layout_marginBottom="7dp"
        android:background="@drawable/button_animation2"/>
    <ImageView
        android:layout_width="145dp"
        android:layout_height="37.5dp"
        tools:ignore="ContentDescription"
        android:id="@+id/sub_time"
        android:layout_below="@id/add_time"
        android:layout_marginBottom="7dp"
        android:background="@drawable/button_animation2"/>
    <ImageView
        android:layout_width="145dp"
        tools:ignore="ContentDescription"
        android:layout_height="37.5dp"
        android:id="@+id/random"
        android:layout_below="@id/sub_time"
        android:background="@drawable/button_animation2"/>
    <com.ahn.tapit.MyButton
        android:layout_width="185dp"
        android:layout_height="50dp"
        android:text="@string/back"
        android:textSize="17.5dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_animation2"
        android:onClick="onBackClick"/>
    <com.ahn.tapit.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12.5dp"
        tapit:fontName="atariFull.ttf"
        android:text="@string/add_score"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:id="@+id/add_score_text"
        android:layout_alignBottom="@id/add_score"
        android:layout_alignLeft="@id/add_score"
        android:layout_alignRight="@id/add_score"
        android:layout_alignEnd="@id/add_score"
        android:layout_alignStart="@id/add_score"
        android:layout_alignTop="@id/add_score" />
    <com.ahn.tapit.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12.5dp"
        tapit:fontName="atariFull.ttf"
        android:text="@string/sub_score"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:id="@+id/sub_score_text"
        android:layout_alignBottom="@id/sub_score"
        android:layout_alignLeft="@id/sub_score"
        android:layout_alignRight="@id/sub_score"
        android:layout_alignEnd="@id/sub_score"
        android:layout_alignStart="@id/sub_score"
        android:layout_alignTop="@id/sub_score" />
    <com.ahn.tapit.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12.5dp"
        android:textColor="#FFFFFF"
        tapit:fontName="atariFull.ttf"
        android:text="@string/add_time"
        android:gravity="center"
        android:id="@+id/add_time_text"
        android:layout_alignBottom="@id/add_time"
        android:layout_alignLeft="@id/add_time"
        android:layout_alignRight="@id/add_time"
        android:layout_alignStart="@id/add_time"
        android:layout_alignEnd="@id/add_time"
        android:layout_alignTop="@id/add_time" />
    <com.ahn.tapit.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12.5dp"
        tapit:fontName="atariFull.ttf"
        android:text="@string/sub_time"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:id="@+id/sub_time_text"
        android:layout_alignBottom="@id/sub_time"
        android:layout_alignLeft="@id/sub_time"
        android:layout_alignRight="@id/sub_time"
        android:layout_alignEnd="@id/sub_time"
        android:layout_alignStart="@id/sub_time"
        android:layout_alignTop="@id/sub_time" />
    <com.ahn.tapit.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12.5dp"
        tapit:fontName="atariFull.ttf"
        android:text="@string/random"
        android:gravity="center"
        android:id="@+id/random_text"
        android:textColor="#FFFFFF"
        android:layout_alignBottom="@id/random"
        android:layout_alignLeft="@id/random"
        android:layout_alignRight="@id/random"
        android:layout_alignEnd="@id/random"
        android:layout_alignStart="@id/random"
        android:layout_alignTop="@id/random" />
    <com.ahn.tapit.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12.5dp"
        tapit:fontName="atariFull.ttf"
        android:paddingTop="5dp"
        android:text="@string/add_5_inst"
        android:id="@+id/add_score_inst"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_alignTop="@id/add_score"
        android:layout_toRightOf="@id/add_score"
        android:layout_toEndOf="@id/add_score" />
    <com.ahn.tapit.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12.5dp"
        tapit:fontName="atariFull.ttf"
        android:text="@string/sub_5_inst"
        android:id="@+id/sub_score_inst"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_alignTop="@+id/sub_score"
        android:layout_toRightOf="@id/sub_score"
        android:layout_toEndOf="@id/sub_score" />
    <com.ahn.tapit.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12.5dp"
        tapit:fontName="atariFull.ttf"
        android:text="@string/add_5s_inst"
        android:id="@+id/add_time_inst"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:paddingTop="5dp"
        android:layout_alignTop="@+id/add_time"
        android:layout_toRightOf="@id/add_time"
        android:layout_toEndOf="@id/add_time" />
    <com.ahn.tapit.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12.5dp"
        tapit:fontName="atariFull.ttf"
        android:text="@string/sub_5s_inst"
        android:id="@+id/sub_time_inst"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_alignTop="@+id/sub_time"
        android:layout_toRightOf="@id/sub_time"
        android:layout_toEndOf="@id/sub_time" />
    <com.ahn.tapit.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12.5dp"
        tapit:fontName="atariFull.ttf"
        android:paddingTop="5dp"
        android:text="@string/random_inst"
        android:id="@+id/random_inst"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_alignTop="@+id/random"
        android:layout_toRightOf="@id/random"
        android:layout_toEndOf="@id/random" />
</RelativeLayout>
