<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tapit="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="375dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:id="@+id/score_listview"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp"
        android:paddingRight="15dp"/>

    <com.ahn.tapit.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_high_score"
        android:layout_marginBottom="30dp"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/score_listview"
        tapit:fontName="atariFull.ttf"
        android:textSize="30dp"
        android:id="@+id/high_scores"/>
    <com.ahn.tapit.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="375dp"
        android:layout_below="@id/high_scores"
        android:text="@string/position"
        tapit:fontName="atariFull.ttf"
        android:textSize="27.5dp"
        android:textColor="#b90606"
        android:lineSpacingExtra="10dp"
        android:paddingLeft="15dp"/>
    <com.ahn.tapit.MyButton
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:text="@string/main_menu"
        android:textSize="16dp"
        android:background="@drawable/button_animation2"
        android:layout_below="@id/score_listview"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/button_main_menu"
        />
    <com.ahn.tapit.MyButton
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:text="@string/play_again"
        android:layout_alignParentRight="true"
        android:textSize="16dp"
        android:background="@drawable/button_animation2"
        android:id="@+id/button_play_again"
        android:layout_below="@id/score_listview"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"/>

</RelativeLayout>